mundanças gerais no site

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="estilo/style.css">
 
     <title>&#127909Stranger Things</title>
   </head>
@@ -20,7 +20,7 @@
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
         <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-          <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+          <a class="navbar-brand" href="home.html"><img src="imagens/fundinho.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,8 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
                 </div>
               </li> 
-              <li><a id="rede" href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img src="imagens/instagram_logo.png"></a></li>
-              <li><a href=""><img src="imagens/twitter_logo.png" alt=""></a></li>
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" src="imagens/twitter-logo-4.png" alt="twitter"></a>
             </ul>
           </div>
         </nav>
@@ -94,8 +94,8 @@
               <figure class="img-thumbnail">
                 <img class="figure-img img-fluid" src="imagens/1 temp.jpg" alt="Filme Mulher Maravilha">
                 <figcaption class="figure-caption">
-                  <h3>Temporada 1</h3>
-                  <p> A pequena cidade de Hawkins é cenário de estranhos acontecimentos. Após o desaparecimento de um garoto, surge uma menina com poderes  sobrenaturais. <br><br></p>
+                  <h3 class="homeh3">Teorias da 4ª Temporada</h3>
+                  <p class="homeP">Com a suposta morte de Hopper, personagem de David Harbour...</p>
                   <a href="seasonone.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
                   </figcaption>
                 </figure>
@@ -104,8 +104,8 @@
                   <figure class="img-thumbnail">
                   <img class="figure-img img-fluid" src="imagens/2 temp.jpg" alt="Filme Mulher Maravilha">
                       <figcaption class="figure-caption">
-                          <h3>Temporada 2</h3>
-                          <p>Um ano se passou, mas os acontecimentos sobrenaturais envolvendo o Demogorgon e os segredos do laboratório de Hawkins ainda assombram a população local.</p>
+                          <h3 class="homeh3">Você conhece o Demogorgon?</h3>
+                          <p class="homeP">A série deixou algumas perguntas que nunca foram respondidas...</p>
                           <a href="seasontwo.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a> 
                       </figcaption>
                   </figure>
@@ -114,8 +114,8 @@
                 <figure class="img-thumbnail">
                   <img class="figure-img img-fluid" src="imagens/3 temp.jpg" alt="Filme Mulher Maravilha">
                   <figcaption class="figure-caption">
-                    <h3>Temporada 3</h3>
-                    <p>Romance no ar. Um shopping novinho em folha. Ratazanas enlouquecidas correndo para o perigo. É o verão de 1985 em Hawkins. E um verão pode mudar tudo. <br><br></p>
+                    <h3 class="homeh3">Melhores Episodeos</h3>
+                    <p class="homeP">Homenagem aos mistérios sobrenaturais clássicos dos anos 80...</p>
                     <a href="seasonthree.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
                   </figcaption>
                 </figure>
@@ -124,8 +124,8 @@
                 <figure class="img-thumbnail">
                   <img class="figure-img img-fluid" src="imagens/4 temp.jpg" alt="Filme Mulher Maravilha">
                   <figcaption class="figure-caption">
-                    <h3>Temporada 4</h3>
-                    <p>Confirmado!<br><br><br><br><br><br><br></p>
+                    <h3 class="homeh3">A mais assustadora!</h3>
+                    <p class="homeP">Gaten Matarazzo, o Dustin de "Stranger Things", promete que a...</p>
                     <a href="seasonone.html"><button type="button" class="btn btn-outline-danger">Ler mais</button></a>
                   </figcaption>
                 </figure>
@@ -137,7 +137,7 @@
       <!-- RODAPÉ --> 
       
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a id="rede" href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img src="imagens/instagram_logo.png"></a></p>     
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter" src="imagens/instagram_logo.png"></a></p>     
       </div>
 
 
