--- a/curiosidades.html
+++ b/curiosidades.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="estilo/style.css">
 
     <title>&#127909Stranger Things</title>
   </head>
 
   <body class="fundo" style="font-family: 'Fonte1';">
     <div class="container">
-      <h1>Inicio</h1>
+      <h1>Curiosidades</h1>
     
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
@@ -40,11 +40,13 @@
                   Temporadas
                 </a>
                 <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="seasonone.html">Temporada 1</a>
-                  <a class="dropdown-item" href="seasontwo.html">Temporada 2</a>
-                  <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
+                  <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
+                  <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
+                  <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" src="imagens/twitter-logo-4.png" alt="twitter"></a>
             </ul>
           </div>
         </nav>
@@ -56,30 +58,40 @@
     <div class="pagina">
         <h2 class="sub1">Inicio >>Curiosidades</h2>
         <h3 class="sub2">Direto do mundo invertido: 5 curiosidades sobre a série Stranger Things</h3>
+        <div class="curiP">
         <p class="recuo">A série Stranger Things é uma das mais populares do catálogo da Netflix, lançada em 2016 e com duas temporadas exibidas. Mas você sabia que, antes disso acontecer, ela já foi rejeitada 20 vezes pela produtora? Esta e outras curiosidades você vai descobrir agora!</p>
-        <ol>
-            <li><h4>Superando a rejeição</h4></li>
-            <p class="">Às vezes, tudo o que a gente precisa é superar uma rejeição e tentar novamente. Neste aspecto, os criadores da série Stranger Things foram bem persistentes: eles foram rejeitados cerca de 20 vezes pela Netflix antes de serem aceitos pela empresa de streaming. Uma das preocupações era que o elenco infantil poderia não conquistar o público adulto. Superada a rejeição, a série pode chegar a ter até cinco temporadas.</p>
+          <ol>
+            <li><h4 class="curih4">Superando a rejeição</h4></li>
+            <p>Às vezes, tudo o que a gente precisa é superar uma rejeição e tentar novamente. Neste aspecto, os criadores da série Stranger Things foram bem persistentes: eles foram rejeitados cerca de 20 vezes pela Netflix antes de serem aceitos pela empresa de streaming. Uma das preocupações era que o elenco infantil poderia não conquistar o público adulto. Superada a rejeição, a série pode chegar a ter até cinco temporadas.</p>
             <img class="imagens" src="imagens/superando_a_rejeicao.jpg" alt="Stranger Things">
-            <li><h4>Seus criadores</h4></li>
+            <li><h4 class="curih4">Seus criadores</h4></li>
             <p>A série foi criada pelos gêmeos Matt Duffer e Ross Duffer, conhecidos como os The Duffer Brothers. Eles fazem filmes desde quando eram crianças, começando a produzir após ganhar de presente de seus pais uma câmera de vídeo Hi8. Além de Stranger Things, eles são conhecidos pelo filme de terror "Hidden", lançado em 2015.</p>
             <img class="imagens" src="imagens/seus_criadores.jpg" alt="Stranger Things">
-            <li><h4>1.000 crianças</h4></li>
+            <li><h4 class="curih4">1.000 crianças</h4></li>
             <p>Este foi o número aproximado de crianças que participaram das audições e enviaram seus vídeos de testes para fazer parte do elenco. Finn Wolfhard, o escolhido para ser o personagem Mike, gravou seu vídeo de cama, pois estava doente. Já Gaten Matarazzo havia feito audição para ser o personagem Mike e acabou virando o Dustin.</p>
             <img class="imagens" src="imagens/mil_criancas.jpg" alt="Stranger Things">
-            <li><h4>Debaixo d'água</h4></li>
+            <li><h4 class="curih4">Debaixo d'água</h4></li>
             <p>Além de flutuar, a personagem Eleven precisa também passar muito tempo embaixo d'água, principalmente nas cenas no laboratório de experiências. Em uma das cenas, a atriz usou um capacete Sea Tank, que pesa 31 quilos fora d'água e apenas seis quilos quando imerso. Nas cenas em que a atriz passa dentro da água, os diretores se comunicavam com ela através de um pequeno fone em seu ouvido.</p>
             <img class="imagens" src="imagens/debaixo_dagua.jpg" alt="Stranger Things">
-            <li><h4>Primeiro beijo</h4></li>
+            <li><h4 class="curih4">Primeiro beijo</h4></li>
             <p>Ainda falando da atriz principal Millie Bobby Brown, você sabia que o primeiro beijo da jovem foi em uma cena da série? Millie beija Finn Wolfhard, o ator que interpreta Mike, no final da primeira temporada. Na época da cena, a atriz tinha apenas doze anos</p>
             <img class="imagens" src="imagens/primeiro_beijo.jpg" alt="Stranger Things">
         </ol>
+        <h3 class="curih4">Ler mais</h3>
+        <ul>
+
+            <li><a href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
+            <li><a href="">Stranger Things: Confira 20 referências e easter-eggs da 3ª temporada</a></li>
+            <li><a href="">Stranger Things: David Harbour revela que 4ª temporada já é sua favorita</a></li>
+        </ul>
+      </div>
     </div>
+
 
     <!-- RODAPÉ -->  
 
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i> <a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img src="imagens/instagram_logo.png" width="40" height="40"></a></p>                
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter" src="imagens/instagram_logo.png" width="40" height="40"></a></p>                
       </div>
 
       <!-- JavaScript (Opcional) -->
