--- a/seasontwo.html
+++ b/seasontwo.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="estilo/style.css">
 
     <title>&#127909Stranger Things</title>
   </head>
@@ -40,9 +40,9 @@
                   Temporadas
                 </a>
                 <div class="dropdown-menu" style="background: #f7003e;" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="seasonone.html">Temporada 1</a>
-                  <a class="dropdown-item" href="seasontwo.html">Temporada 2</a>
-                  <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
+                  <a class="dropdown-item" href="seasonone.html">1ª Temporada</a>
+                  <a class="dropdown-item" href="seasontwo.html">2ª Temporada</a>
+                  <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
             </ul>
@@ -50,9 +50,26 @@
         </nav>
 
       <!-- FIM MENU -->
-      
-    </div>      
-
+      <div class="pagina">
+        <h4 class="twoh4">Episodeos</h4>
+        <ol class="twoOl">
+          <li>"MADMAX"</li>
+          <li>"Trick or Treat, Freak"</li>
+          <li>"Will the Wise"</li>
+          <li>"The Pollywog"</li>
+          <li>"Dig Dug"</li>
+          <li>"The Spy"</li>
+          <li>"The Lost Sister"</li>
+          <li>"The Mind Flayer"</li>
+          <li>"The Gate"</li>
+        </ol>
+        <h4 class="oneh4">Ler mais</h4>
+        <ul class="oneUl">
+          <li><a class="oneA" href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
+          <li><a class="oneA" href="">Stranger Things: Confira 20 referências e easter-eggs da 3ª temporada</a></li>
+          <li><a class="oneA" href="">Stranger Things: David Harbour revela que 4ª temporada já é sua favorita</a></li>
+        </ul>
+      </div>
       <!-- RODAPÉ -->  
 
       <div id="footer">
@@ -64,5 +81,6 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
+    </div>     
   </body>
 </html>
