--- a/curiosidades.html
+++ b/curiosidades.html
@@ -45,8 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
-              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" src="imagens/instagram_logo.png" alt="instagran"></a>
-              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
             </ul>
           </div>
         </nav>
@@ -63,16 +63,16 @@
           <ol>
             <li><h4 class="curih4">Superando a rejeição</h4></li>
             <p>Às vezes, tudo o que a gente precisa é superar uma rejeição e tentar novamente. Neste aspecto, os criadores da série Stranger Things foram bem persistentes: eles foram rejeitados cerca de 20 vezes pela Netflix antes de serem aceitos pela empresa de streaming. Uma das preocupações era que o elenco infantil poderia não conquistar o público adulto. Superada a rejeição, a série pode chegar a ter até cinco temporadas.</p>
-            <img class="imagens" src="imagens/superando_a_rejeicao.jpg" alt="Stranger Things">
+            <img class="imagens img-fluid" src="imagens/superando_a_rejeicao.jpg" alt="Stranger Things">
             <li><h4 class="curih4">Seus criadores</h4></li>
             <p>A série foi criada pelos gêmeos Matt Duffer e Ross Duffer, conhecidos como os The Duffer Brothers. Eles fazem filmes desde quando eram crianças, começando a produzir após ganhar de presente de seus pais uma câmera de vídeo Hi8. Além de Stranger Things, eles são conhecidos pelo filme de terror "Hidden", lançado em 2015.</p>
-            <img class="imagens" src="imagens/seus_criadores.jpg" alt="Stranger Things">
+            <img class="imagens img-fluid" src="imagens/seus_criadores.jpg" alt="Stranger Things">
             <li><h4 class="curih4">1.000 crianças</h4></li>
             <p>Este foi o número aproximado de crianças que participaram das audições e enviaram seus vídeos de testes para fazer parte do elenco. Finn Wolfhard, o escolhido para ser o personagem Mike, gravou seu vídeo de cama, pois estava doente. Já Gaten Matarazzo havia feito audição para ser o personagem Mike e acabou virando o Dustin.</p>
-            <img class="imagens" src="imagens/mil_criancas.jpg" alt="Stranger Things">
+            <img class="imagens img-fluid" src="imagens/mil_criancas.jpg" alt="Stranger Things">
             <li><h4 class="curih4">Debaixo d'água</h4></li>
             <p>Além de flutuar, a personagem Eleven precisa também passar muito tempo embaixo d'água, principalmente nas cenas no laboratório de experiências. Em uma das cenas, a atriz usou um capacete Sea Tank, que pesa 31 quilos fora d'água e apenas seis quilos quando imerso. Nas cenas em que a atriz passa dentro da água, os diretores se comunicavam com ela através de um pequeno fone em seu ouvido.</p>
-            <img class="imagens" src="imagens/debaixo_dagua.jpg" alt="Stranger Things">
+            <img class="imagens img-fluid" src="imagens/debaixo_dagua.jpg" alt="Stranger Things">
             <li><h4 class="curih4">Primeiro beijo</h4></li>
             <p>Ainda falando da atriz principal Millie Bobby Brown, você sabia que o primeiro beijo da jovem foi em uma cena da série? Millie beija Finn Wolfhard, o ator que interpreta Mike, no final da primeira temporada. Na época da cena, a atriz tinha apenas doze anos</p>
             <img class="imagens" src="imagens/primeiro_beijo.jpg" alt="Stranger Things">
