--- a/seasontwo.html
+++ b/seasontwo.html
@@ -73,7 +73,7 @@
       <!-- RODAPÉ -->  
 
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i> <a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img src="imagens/instagram_logo.png" width="40" height="40" id="face"></a></p>                
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="img-fluid" src="imagens/instagram_logo.png" width="40" height="40" id="face"></a></p>                
       </div>
 
       <!-- JavaScript (Opcional) -->
