--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">Temporada 3</a>
                 </div>
               </li> 
-              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" src="imagens/instagram_logo.png" alt="instagran"></a>
-              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
             </ul>
           </div>
         </nav>
@@ -83,7 +83,7 @@
         <h3 class="sub3">História da serie</h3>
           <p class="recuo">Passada na década de 80, na cidade fictícia de Hawkings, Stranger Things conta a história de um garoto que desaparece e dos eventos paranormais que se passam em torno desse acontecimento. Os personagens principais são seu grupo de amigos que acaba fazendo amizade com uma menina fugida de um laboratório e com poderes psicocinéticos.</p>
           <p class="recuo">O sucesso da série está na forma como esta mistura o paranormal, o mistério e o drama, com representações fenomenais por parte dos atores. Além disso, Stranger Things apela também à nostalgia, fazendo uma homenagem à cultura pop dos anos 80.</p>
-          <center><img style="padding-bottom: 10px; "src="imagens/imginicio.jpg" alt=""></center>
+          <center><img class="img-fluid" style="padding-bottom: 10px; "src="imagens/imginicio.jpg" alt=""></center>
         </div>
         <!-- COLUNAS -->
 
@@ -137,7 +137,7 @@
       <!-- RODAPÉ --> 
       
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter" src="imagens/instagram_logo.png"></a></p>     
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a></p>     
       </div>
 
 
