--- a/seasonone.html
+++ b/seasonone.html
@@ -45,8 +45,8 @@
                   <a class="dropdown-item" href="seasonthree.html">3ª Temporada</a>
                 </div>
               </li> 
-              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" src="imagens/instagram_logo.png" alt="instagran"></a>
-              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" src="imagens/twitter-logo-4.png" alt="twitter"></a>
+              <a href="https://www.instagram.com/strangerthingstv/" target="_blank"><img id="rede1" class="img-fluid" src="imagens/instagram_logo.png" alt="instagran"></a>
+              <a href="https://twitter.com/Stranger_Things" target="_blank"><img id="rede2" class="img-fluid" src="imagens/twitter-logo-4.png" alt="twitter"></a>
             </ul>
           </div>
         </nav>
@@ -61,7 +61,7 @@
           <p class="onerecuo"> Uma carta de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um jovem que desaparece no ar. Enquanto amigos, família e polícia local procuram por respostas, eles são atraídos para um mistério extraordinário envolvendo experimentos ultrassecretos do governo, forças. Stranger Things é estrelado por Winona Ryder, David Harbor, Finn Wolfhard, Millie Brown, Gaten Matarazzo, Caleb McLaughlin, Noah Schnapp, Natalia Dyer, Cara Buono, Charlie Heaton e Matthew Modine. Matt Duffer e Ross Duffer (Wayward Pines, Hidden) atuam como roteiristas, diretores e co-showrunners da série e são produtores executivos junto com Shawn Levy e Dan Cohen por meio de seu banner de entretenimento 21 Laps (The Spectacular Now, Night At The Museum , Real Steel, Date Night). Shawn Levy também atua como diretor. Stranger Things é uma série original da Netflix. "</p>
           <p class="onerecuo">Hawkins, Indiana. 1983. Um garoto de 12 anos desaparece misteriosamente. A família e a polícia procuram respostas, mas acabam se deparando com um experimento secreto do governo. Enquanto isso, os amigos do menino iniciam suas próprias investigações, o que os levam a um extraordinário mistério envolvendo forças sobrenaturais e uma garotinha muito, muito estranha.</p>
         </div>
-        <center><img src="imagens/img temp1-2te.jpg" alt=""></center>
+        <center><img class="img-fluid" src="imagens/img temp1-2te.jpg" alt=""></center>
         <h4 class="oneh4">Episodeos</h4>
         <ol class="oneOl">
           <li>"The Vanishing of Will Byers"</li>
@@ -75,7 +75,7 @@
         </ol>
         <h4 class="oneh4">Trailer</h4>
         <p class="onerecuo" style="font-family: Arial, Helvetica, sans-serif; font-size: 12pt;">Trailer da 1ª Temporada de Stranger Things:</p>
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/b9EkMc79ZSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <center><iframe class="img-fluid" width="560" height="315" src="https://www.youtube.com/embed/b9EkMc79ZSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         <h4 class="oneh4">Ler mais</h4>
         <ul class="oneUl">
           <li><a class="oneA" href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
@@ -87,7 +87,7 @@
       <!-- RODAPÉ -->  
 
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter" src="imagens/instagram_logo.png" width="40" height="40" id="face"></a></p>                
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png" width="40" height="40" id="face"></a></p>                
       </div>
 
       <!-- JavaScript (Opcional) -->
