--- a/Elenco.html
+++ b/Elenco.html
@@ -28,7 +28,7 @@
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="Elenco.html">Elenco <span class="sr-only">(atual)</span></a>
