--- a/curiosidades.html
+++ b/curiosidades.html
@@ -90,9 +90,9 @@
 
     <!-- RODAPÉ -->  
 
-      <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter" src="imagens/instagram_logo.png" width="40" height="40"></a></p>                
-      </div>
+    <div id="footer">
+      <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a></p>     
+    </div>
 
       <!-- JavaScript (Opcional) -->
       <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
