--- a/seasonone.html
+++ b/seasonone.html
@@ -75,7 +75,7 @@
         </ol>
         <h4 class="oneh4">Trailer</h4>
         <p class="onerecuo" style="font-family: Arial, Helvetica, sans-serif; font-size: 12pt;">Trailer da 1ª Temporada de Stranger Things:</p>
-        <center><iframe class="img-fluid" width="560" height="315" src="https://www.youtube.com/embed/b9EkMc79ZSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/b9EkMc79ZSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         <h4 class="oneh4">Ler mais</h4>
         <ul class="oneUl">
           <li><a class="oneA" href="">Stranger Things: Imagem de bastidores revela retorno de personagem importante na 4ª temporada</a></li>
