--- a/seasonone.html
+++ b/seasonone.html
@@ -54,7 +54,7 @@
       <!-- FIM MENU -->
 
       <div class="pagina">
-        <h2 class="sub1">Inicio >> Stranger Things</h2>
+        <h2 class="sub1">Inicio >> Stranger Things: 1ª Temporada</h2>
         <h3 class="oneh3">1ª Temporada</h3>
         <div class="oneP">
           <p class="onerecuo" style="padding-top: 20px;">99 em cem vezes, a criança desaparecida está com um dos pais ou parente. E da outra vez?</p>
