--- a/seasontwo.html
+++ b/seasontwo.html
@@ -51,6 +51,10 @@
 
       <!-- FIM MENU -->
       <div class="pagina">
+        <h2 class="sub1">Inicio >> Stranger Things: 2ª Temporada</h2>
+        <h3>2ª Temporada</h3>
+        <p class="tworecuo">Stranger Things 2 foi confirmado pela Netflix em 31 de agosto de 2016 para um lançamento de 2017. Um trailer de anúncio revelou que a segunda temporada consistiu em nove episódios, além de mostrar o título provisório de cada episódio. As filmagens da temporada começaram em Atlanta, Geórgia, em 7 de novembro de 2016.</p>
+        <p class="tworecuo">Passado em Hawkins no outono de 1984, a história continua enquanto forças sobrenaturais mais uma vez começam a afetar a cidade. Enquanto a temporada atende ao elenco e aos personagens principais da primeira temporada, vários novos personagens são introduzidos: o moleca Max e seu meio-irmão mais velho Billy , uma garota chamada Kali conectada ao Hawkins Lab , o gerente da RadioShack Bob Newby, O agente do Departamento de Energia Dr. Owens e o desgraçado jornalista que virou teórico da conspiração Murray Bauman. Semelhante à temporada anterior, a 2ª temporada foi elogiada pela crítica e pelo público e foi elogiada por ser muito mais voltada para o terror.</p>
         <h4 class="twoh4">Episodeos</h4>
         <ol class="twoOl">
           <li>"MADMAX"</li>
