--- a/seasonone.html
+++ b/seasonone.html
@@ -15,6 +15,12 @@
   </head>
 
   <body class="fundo" style="font-family: 'Fonte1';">
+    <div class="modal">
+      <div class="modal_content">
+          <img src="imagens/01.jpg" id="modal_img">
+      </div>
+      <span id="bt_close">&times;</span>
+    </div>
     <div class="container">
       <h1>1ª Temporada</h1>
     
@@ -63,12 +69,6 @@
           <p class="onerecuo">99 em cem vezes, a criança desaparecida está com um dos pais ou parente. E da outra vez?</p>
           <p class="onerecuo"> Uma carta de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um jovem que desaparece no ar. Enquanto amigos, família e polícia local procuram por respostas, eles são atraídos para um mistério extraordinário envolvendo experimentos ultrassecretos do governo, forças. Stranger Things é estrelado por Winona Ryder, David Harbor, Finn Wolfhard, Millie Brown, Gaten Matarazzo, Caleb McLaughlin, Noah Schnapp, Natalia Dyer, Cara Buono, Charlie Heaton e Matthew Modine. Matt Duffer e Ross Duffer (Wayward Pines, Hidden) atuam como roteiristas, diretores e co-showrunners da série e são produtores executivos junto com Shawn Levy e Dan Cohen por meio de seu banner de entretenimento 21 Laps (The Spectacular Now, Night At The Museum , Real Steel, Date Night). Shawn Levy também atua como diretor. Stranger Things é uma série original da Netflix. "</p>
           <p class="onerecuo">Hawkins, Indiana. 1983. Um garoto de 12 anos desaparece misteriosamente. A família e a polícia procuram respostas, mas acabam se deparando com um experimento secreto do governo. Enquanto isso, os amigos do menino iniciam suas próprias investigações, o que os levam a um extraordinário mistério envolvendo forças sobrenaturais e uma garotinha muito, muito estranha.</p>
-          <div class="modal">
-            <div class="modal_content">
-                <img src="imagens/img temp1-1.jpg" id="modal_img">
-            </div>
-            <span id="bt_close">&times;</span>
-          </div>
           <div class="row">
             <div class="card_img">
                 <img src="imagens/img temp1-1.jpg" class="small_img">
