--- a/seasontwo.html
+++ b/seasontwo.html
@@ -17,7 +17,7 @@
   <body class="fundo" style="font-family: 'Fonte1';">
     <div class="modal">
       <div class="modal_content">
-          <img src="imagens/" id="modal_img">
+          <img src="imagens/01.jpg" id="modal_img">
       </div>
       <span id="bt_close">&times;</span>
     </div>
